2006-03-31  John Sullivan  <sullivan@apple.com>

        Reviewed by Tim Omernick.
        
        Some cleanup in the WebIconDatabase code in a fruitless search for the cause
        of the mysterious -[WebFileDatabase performSetObject:forKey] crash

        * Misc/WebIconDatabase.m:
        (-[WebIconDatabase _createFileDatabase]):
        removed obsolete comment
        (-[WebIconDatabase _loadIconDictionaries]):
        Added ERRORs for unexpected early returns. Made dictionaries be autoreleased until
        the end of the method where they are retained, so that the early returns don't leak;
        added ASSERTs that the _private->dictionary values aren't being leaked.
        (-[WebIconDatabase _updateFileDatabase]):
        Added an ERROR for an unexpected early return, and made a trivial style fix.

2006-03-31  Trey Matteson  <trey@usa.net>

        Reviewed by Maciej, landed by ap.

        http://bugzilla.opendarwin.org/show_bug.cgi?id=7739
        REGRESSION: Assertion failure loading acid2 test in -[WebCoreFrameBridge installInFrame:]

        Tests: http/tests/misc/acid2.html, http/tests/misc/acid2-pixel.html

        The gist of this change is that we must cancel the load from the Webkit side when we
        realize we're switching to the fallback content.  This is somewhat a temp workaround
        since control of loading will be moving to WebCore.

        * WebView/WebMainResourceLoader.m:
        (-[WebMainResourceLoader continueAfterContentPolicy:response:]):

2006-03-30  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by darin
        
        http://bugzilla.opendarwin.org/show_bug.cgi?id=6989
        REGRESSION: Plain-text mode needed for contenteditable area used in new text field

        * WebView/WebHTMLView.m:
        (-[WebHTMLView _canEditRichly]): Added.
        (-[WebHTMLView _canIncreaseSelectionListLevel]): Use _canEditRichly
        (-[WebHTMLView _canDecreaseSelectionListLevel]): Ditto.